--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "^2.11.6",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,8 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^9.0.1",
     "saas": "^1.0.0",
     "sass": "^1.51.0",
