--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^9.0.1",
+    "react-use-clipboard": "^1.0.9",
     "saas": "^1.0.0",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
